Corrección de ruta de archivos

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                   <h2 data-frequentQuestions-text="subTitle">
                     ¿Que es la Inteligencia Artificial?
                   </h2>
-                  <img data-frequentQuestions-img="img" src="down_icon.svg
+                  <img data-frequentQuestions-img="img" src="assets/down_icon.svg
               " alt="" class="accordion-image">
                 </div>
                 <p data-frequentQuestions-text="text" class="accordion-content">La Inteligencia Artificial (IA) se refiere a la capacidad de las máquinas o sistemas informáticos para imitar o simular la inteligencia humana. Consiste en desarrollar programas o algoritmos que pueden realizar tareas que normalmente requieren de la inteligencia humana, como el razonamiento, el aprendizaje, la percepción visual o auditiva, la comprensión del lenguaje natural, la toma de decisiones y la resolución de problemas.</p>
@@ -131,7 +131,7 @@
                   <h2 data-frequentQuestions-text="subTitle">
                     ¿En qué consiste la automatización?
                   </h2>
-                  <img data-frequentQuestions-img="img" src="down_icon.svg
+                  <img data-frequentQuestions-img="img" src="assets/down_icon.svg
               " alt="" class="accordion-image">
                 </div>
                 <p data-frequentQuestions-text="text" class="accordion-content">La automatización se refiere al uso de tecnología y sistemas para realizar tareas o procesos de manera automática, sin intervención humana directa. Consiste en la aplicación de herramientas y sistemas que pueden ejecutar tareas o funciones de manera programada y repetitiva, reduciendo o eliminando la necesidad de la intervención manual en esos procesos.</p>
@@ -141,7 +141,7 @@
                   <h2 data-frequentQuestions-text="subTitle">
                     ¿Qué es la domótica?
                   </h2>
-                  <img data-frequentQuestions-img="img" src="down_icon.svg
+                  <img data-frequentQuestions-img="img" src="assets/down_icon.svg
               " alt="" class="accordion-image">
                 </div>
                 <p data-frequentQuestions-text="text" class="accordion-content">La domótica es un término que proviene de la combinación de las palabras "domus" (casa en latín) y "robótica". Se refiere a la aplicación de la tecnología y la automatización en el hogar para mejorar la calidad de vida, la comodidad, la seguridad y la eficiencia energética.</p>
@@ -151,7 +151,7 @@
                   <h2 data-frequentQuestions-text="subTitle">
                     ¿Qué es la Inmótica?
                   </h2>
-                  <img data-frequentQuestions-img="img" src="down_icon.svg
+                  <img data-frequentQuestions-img="img" src="assets/down_icon.svg
               " alt="" class="accordion-image">
                 </div>
                 <p data-frequentQuestions-text="text" class="accordion-content">La Inmótica es un término relacionado con la automatización de edificios o inmuebles comerciales. También conocida como automatización de edificios, se refiere a la aplicación de tecnología y sistemas inteligentes para la gestión y control de diferentes sistemas y servicios dentro de un edificio, como la iluminación, climatización, seguridad, comunicaciones, energía, entre otros.</p>
@@ -165,7 +165,7 @@
                   <h2 data-frequentQuestions-text="subTitle">
                     ¿El aprendizaje automático en las IAs?
                   </h2>
-                  <img data-frequentQuestions-img="img" src="down_icon.svg
+                  <img data-frequentQuestions-img="img" src="assets/down_icon.svg
               " alt="" class="accordion-image">
                 </div>
                 <p data-frequentQuestions-text="text" class="accordion-content">El aprendizaje automático es una parte fascinante de la inteligencia artificial que permite a las máquinas aprender y mejorar por sí mismas a través de la experiencia. En lugar de darles instrucciones detalladas, les proporcionamos ejemplos y datos para que encuentren patrones y tomen decisiones inteligentes.</p>
@@ -175,7 +175,7 @@
                   <h2 data-frequentQuestions-text="subTitle">
                     ¿La inteligencia artificial en la educación?
                   </h2>
-                  <img data-frequentQuestions-img="img" src="down_icon.svg
+                  <img data-frequentQuestions-img="img" src="assets/down_icon.svg
               " alt="" class="accordion-image">
                 </div>
                 <p data-frequentQuestions-text="text" class="accordion-content">La inteligencia artificial (IA) tiene un gran potencial para transformar la educación, ofreciendo una serie de beneficios significativos. En primer lugar, la IA permite personalizar el aprendizaje de cada estudiante al adaptarse a sus necesidades individuales, ritmo de aprendizaje y estilo de aprendizaje preferido. Esto significa que los estudiantes pueden recibir contenido y actividades educativas que sean relevantes y desafiantes para ellos, lo que mejora su compromiso y motivación.</p>
@@ -185,7 +185,7 @@
                   <h2 data-frequentQuestions-text="subTitle">
                     ¿Cuáles son los beneficios de la Domótica?
                   </h2>
-                  <img data-frequentQuestions-img="img" src="down_icon.svg
+                  <img data-frequentQuestions-img="img" src="assets/down_icon.svg
               " alt="" class="accordion-image">
                 </div>
                 <p data-frequentQuestions-text="text" class="accordion-content">La domótica, o automatización del hogar, ofrece una serie de beneficios significativos. Permite la conveniencia al controlar y gestionar dispositivos desde un dispositivo móvil o mediante comandos de voz. También promueve el ahorro de energía al monitorear y controlar eficientemente el consumo de energía. Mejora la seguridad al supervisar y controlar sistemas de seguridad y proporciona una gestión eficiente del hogar al automatizar tareas repetitivas. Además, ofrece accesibilidad y adaptabilidad para personas con movilidad reducida.</p>
@@ -195,7 +195,7 @@
                   <h2 data-frequentQuestions-text="subTitle">
                     ¿Cuáles son los beneficios de la Inmótica?
                   </h2>
-                  <img data-frequentQuestions-img="img" src="down_icon.svg
+                  <img data-frequentQuestions-img="img" src="assets/down_icon.svg
               " alt="" class="accordion-image">
                 </div>
                 <p data-frequentQuestions-text="text" class="accordion-content">La Inmótica, o automatización de edificios inteligentes, ofrece una serie de beneficios en el control y gestión de edificios. Contribuye a la eficiencia energética al permitir el control centralizado de sistemas como la iluminación y climatización, optimizando su consumo. Además, mejora el confort y bienestar de los ocupantes al personalizar el entorno según sus preferencias. La Inmótica también garantiza la seguridad del edificio mediante la integración de sistemas de seguridad y facilita el mantenimiento predictivo al monitorear el estado de los equipos.</p>
